--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en' dir='ltr' data-theme='dark'>
   <head>
     <meta charset='UTF-8' />
     <link rel='icon' type='image/svg+xml' href='/favicon.ico' />
@@ -9,7 +9,11 @@
     <meta name='description' content='Find GitHub information from users'>
   </head>
   <body>
-    <div id='app'></div>
+    <div id='app'>
+    </div>
+    <a href="#main" class="skip-to-content">
+      Skipt to Content
+    </a>
     <script type='module' src='/main.js'></script>
     <script src='./js/theme.js'></script>
   </body>
