Change color header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
           <div class='search-box' id='searchBox'>
             <span class='material-symbols-rounded leading-icon'>search</span>
-            <input type='search' name='search' aria-label='Search GitHub username' placeholder='Search' class='search-field' data-search-submit>
+            <input type='search' name='search' aria-label='Search GitHub username' placeholder='Search' class='search-field' data-search-field>
             <button class='search-btn' aria-label='Search submit' data-search-submit>
               <span class='material-symbols-rounded'>search</span>
               <span class='label-1'>Search</span>
