--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
         </button>
       </div>
     </header>
+
+    <main class="main" id="main">
+      <div class="container">
+        <section class="profile" data-profile-card>
+          <div class="profile-skeleton">
+            <div class="skeleton avatar-skeleton"></div>
+            <div class="skeleton title-skeleton"></div>
+            <div class="skeleton text-skeleton text-1"></div>
+            <div class="skeleton text-skeleton text-2"></div>
+            <div class="skeleton text-skeleton text-3"></div>
+          </div>
+        </section>
+      </div>
+    </main>
     <script type='module' src='/main.js'></script>
   </body>
 </html>
