Stats and footer

--- a/index.html
+++ b/index.html
@@ -71,8 +71,12 @@
 
           <ul class="profile-meta">
             <li class="meta-item">
-              <span class="material-symbols-rounded" aria-hidden="true">apartment</span>
+              <span class="material-symbols-rounded" aria-hidden="true">location_on</span>
               <span class="meta-text">Colombia / Barranquilla</span>
+            </li>
+            <li class="meta-item">
+              <span class="material-symbols-rounded" aria-hidden="true">apartment</span>
+              <span class="meta-text">Google</span>
             </li>
             <li class="meta-item">
               <span class="material-symbols-rounded" aria-hidden="true">captive_portal</span>
@@ -87,6 +91,22 @@
               </span>
             </li>
           </ul>
+
+          <ul class="profile-stats">
+            <li class="stats-item">
+              <span class="body">54</span> Repos
+            </li>
+            <li class="stats-item">
+              <span class="body">3</span> Followers
+            </li>
+            <li class="stats-item">
+              <span class="body">1</span> Following
+            </li>
+          </ul>
+
+          <footer class="footer">
+            <p class="copyright">&copy; 2023 daviardev</p>
+          </footer>
         <!--
           <div class="profile-skeleton">
             <div class="skeleton avatar-skeleton"></div>
